# susshi

./: .SRCINFO  .checkov.yml  .mega-linter.yml  404.html  CHANGELOG.md  CLAUDE.md  Cargo.toml  PKGBUILD  README.md  ROADMAP.md  codecov.yml  deny.toml  index.html  mkdocs.yml  release-plz.toml  sitemap.xml  susshi.spec
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: aur-publish.yml  ci.yml  claude-code-review.yml  claude.yml  dependabot-auto-merge.yml  docs.yml  release-plz.yml  release.yml
cli/: index.html
configuration/: index.html
docs/: configuration.md  getting-started.md  index.md  roadmap.md  robots.txt  use-cases.md
docs/overrides/: main.html
docs/stylesheets/: extra.css
examples/: full_config.yaml
getting-started/: index.html
hooks/: index.html
import-export/: index.html
roadmap/: index.html
scp/: index.html
scripts/: update-pkgbuild.sh
search/: search_index.json
src/: app.rs  config.rs  main.rs
src/app/: lifecycle.rs  tests_command.rs  tests_expansion_state.rs  tests_favorites.rs  tests_helpers.rs  tests_overview.rs  tests_reload.rs  tests_scp_state.rs  tests_selection_extended.rs  tests_state_mutations.rs  tests_tunnel_state.rs  tests_visibility.rs  tests_wallix.rs
src/export/: mod.rs  nmap.rs  terraform.rs
src/handlers/: mod.rs
src/ssh/: client.rs
ssh-advanced/: index.html
tests/: ssh_security.rs
troubleshooting/: index.html
tui/: index.html
tunnels/: index.html
use-cases/: index.html
wallix/: index.html
